--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -50,6 +50,13 @@ body{
     position: relative;
 }
 
+.menu-checkbox{
+	margin-left:18px !important;
+}
+.menu-checkbox > .md-label{
+	margin-left:13px !important;
+}
+
 .header-menu-icon{
 	    margin-top: 3px !important;
 }
