--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -22,6 +22,9 @@
 	font-size: 1.5em;
 	color: #333;
 }
+.view-container{
+	height: 100%; 
+}
 body{
 	font-size: 100% !important;
 	background-color: #fafafa;
